--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SOLANA_ENDPOINT = <PUT YOUR SOLANA ENDPOINT HERE>
+NEXT_PUBLIC_SOLANA_ENDPOINT = https://prettiest-icy-lambo.solana-devnet.discover.quiknode.pro/2bf7c656370a6f10d5dc38c23bf6b878037fcef2/
 NEXT_PUBLIC_SOLANA_NETWORK = "devnet"
