--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "gum-test",
   "version": "0.1.0",
@@ -9,8 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.17",
     "@gumhq/react-sdk": "^3.0.1",
     "@gumhq/ui-components": "^2.0.4",
+    "@headlessui/react": "^1.7.15",
+    "@livepeer/react": "^2.6.1",
+    "@rajesh896/video-thumbnails-generator": "^2.3.9",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.30",
     "@solana/wallet-adapter-react-ui": "^0.9.29",
@@ -22,9 +27,23 @@
     "dotenv": "^16.1.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
+    "graphql": "^16.7.1",
+    "graphql-request": "^6.1.0",
+    "ipfs-http-client": "^60.0.1",
+    "moment": "^2.29.4",
     "next": "13.2.1",
+    "next-progress": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-share": "^4.4.1",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2"
   }
 }
